{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 269,
  "lineage": "ee60d5cc-45bd-1951-fb48-1a5e619d510d",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:loadbalancer/app/lending-app-frontend-alb/e8921609a416e378",
            "arn_suffix": "app/lending-app-frontend-alb/e8921609a416e378",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lending-app-frontend-alb-355959335.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:loadbalancer/app/lending-app-frontend-alb/e8921609a416e378",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lending-app-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011424f2d5b1bdd74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0607fb9704a3c616f"
              },
              {
                "subnet_id": "subnet-0e2d2c3422545c3a3"
              }
            ],
            "subnets": [
              "subnet-0607fb9704a3c616f",
              "subnet-0e2d2c3422545c3a3"
            ],
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc_id": "vpc-0577bed8577989344",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener/app/lending-app-frontend-alb/e8921609a416e378/2536b33c8a64c588",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-frontend-lb-tg/f88a0a5e1a2a0142",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener/app/lending-app-frontend-alb/e8921609a416e378/2536b33c8a64c588",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:loadbalancer/app/lending-app-frontend-alb/e8921609a416e378",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-frontend-lb-tg/f88a0a5e1a2a0142",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener-rule/app/lending-app-frontend-alb/e8921609a416e378/2536b33c8a64c588/85aa71317702545d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener-rule/app/lending-app-frontend-alb/e8921609a416e378/2536b33c8a64c588/85aa71317702545d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener/app/lending-app-frontend-alb/e8921609a416e378/2536b33c8a64c588",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-frontend-lb-tg/f88a0a5e1a2a0142",
            "arn_suffix": "targetgroup/lending-app-frontend-lb-tg/f88a0a5e1a2a0142",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-frontend-lb-tg/f88a0a5e1a2a0142",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lending-app-frontend-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0577bed8577989344"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:security-group/sg-011424f2d5b1bdd74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011424f2d5b1bdd74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lending-app-frontend-alb-sg",
            "name_prefix": "",
            "owner_id": "986363585035",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577bed8577989344"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:security-group/sg-0dec9597d14cc0a67",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dec9597d14cc0a67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011424f2d5b1bdd74"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lending-app-frontend-ecs-sg",
            "name_prefix": "",
            "owner_id": "986363585035",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577bed8577989344"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebbdf07e5bfd43f4",
            "arn": "arn:aws:ec2:us-east-1:986363585035:elastic-ip/eipalloc-0ebbdf07e5bfd43f4",
            "domain": "vpc",
            "id": "eipalloc-0ebbdf07e5bfd43f4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-4-134.compute-1.amazonaws.com",
            "public_ip": "44.221.4.134",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015af1a62c1f163f8",
            "arn": "arn:aws:ec2:us-east-1:986363585035:elastic-ip/eipalloc-015af1a62c1f163f8",
            "domain": "vpc",
            "id": "eipalloc-015af1a62c1f163f8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-226-188-5.compute-1.amazonaws.com",
            "public_ip": "3.226.188.5",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:internet-gateway/igw-0435004e71ebc1019",
            "id": "igw-0435004e71ebc1019",
            "owner_id": "986363585035",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc_id": "vpc-0577bed8577989344"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebbdf07e5bfd43f4",
            "association_id": "eipassoc-0aaf633c1f053a9cc",
            "connectivity_type": "public",
            "id": "nat-0e5b375bf4a1f6eb6",
            "network_interface_id": "eni-0ef58fb42d8334c05",
            "private_ip": "10.0.1.254",
            "public_ip": "44.221.4.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2d2c3422545c3a3",
            "tags_all": {
              "app": "lending-app-frontend"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015af1a62c1f163f8",
            "association_id": "eipassoc-003fdf8aa71562ada",
            "connectivity_type": "public",
            "id": "nat-009c00313ecaa9b80",
            "network_interface_id": "eni-01a78c276161ea3cb",
            "private_ip": "10.0.2.141",
            "public_ip": "3.226.188.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0607fb9704a3c616f",
            "tags_all": {
              "app": "lending-app-frontend"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:route-table/rtb-02085be0207549d3b",
            "id": "rtb-02085be0207549d3b",
            "owner_id": "986363585035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e5b375bf4a1f6eb6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577bed8577989344"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:route-table/rtb-0bf37fd35b7f3126e",
            "id": "rtb-0bf37fd35b7f3126e",
            "owner_id": "986363585035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009c00313ecaa9b80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577bed8577989344"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:route-table/rtb-0238b3172c560deb1",
            "id": "rtb-0238b3172c560deb1",
            "owner_id": "986363585035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0435004e71ebc1019",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577bed8577989344"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075426900998d3de4",
            "route_table_id": "rtb-02085be0207549d3b",
            "subnet_id": "subnet-0f2f7c01eb26f502f"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029b5558e30c7d0cf",
            "route_table_id": "rtb-0bf37fd35b7f3126e",
            "subnet_id": "subnet-0fb84f0f9c07da972"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d005e0c90dc89520",
            "route_table_id": "rtb-0238b3172c560deb1",
            "subnet_id": "subnet-0e2d2c3422545c3a3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fe71e7817e53713",
            "route_table_id": "rtb-0238b3172c560deb1",
            "subnet_id": "subnet-0607fb9704a3c616f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-0f2f7c01eb26f502f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2f7c01eb26f502f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc_id": "vpc-0577bed8577989344"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-0fb84f0f9c07da972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb84f0f9c07da972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc_id": "vpc-0577bed8577989344"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-0e2d2c3422545c3a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2d2c3422545c3a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc_id": "vpc-0577bed8577989344"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-0607fb9704a3c616f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0607fb9704a3c616f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-frontend"
            },
            "vpc_id": "vpc-0577bed8577989344"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:vpc/vpc-0577bed8577989344",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098ec5c2ab874e1d0",
            "default_route_table_id": "rtb-0fb4f10c9e4e417a8",
            "default_security_group_id": "sg-0b24e126b027505df",
            "dhcp_options_id": "dopt-581d0a3e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0577bed8577989344",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb4f10c9e4e417a8",
            "owner_id": "986363585035",
            "tags_all": {
              "app": "lending-app-frontend"
            }
          }
        }
      ]
    }
  ]
}